2011-07-16    <Jim@X64PC>

	* QtSpim/menu.cpp (sim_Run) [Merlin Hansen ( wasteofammo )]:
	Reduced frequency of updating screen 100-fold to reduce the ~100
	slowdown relative to the console version.

2011-06-19    <Jim@X64PC>

	* QtSpim/Documentation/SourceForge [kevin.vermeer (kevin.vermeer)]:
	PDF files not uploaded to SourceForge.

	* QtSpim/datawin.cpp (formatMemoryContents) [Robert K. Moniot ( moniot )]:
	Incorrect html dropped line break after run of zeros.

	* QtSpim/help/Fig7.1.jpg [William Barrett wbarrett1076@comcast.net]:
	Missing figure in help file: rename file from FIg7.1.jpg to
	Fig7.1.jpg since help tools are case sensitive.

	* QtSpim/regwin.cpp [William Barrett wbarrett1076@comcast.net]:
	Only printed out half of double precision FP registers.

	* QtSpim/spimview.ui [William Barrett wbarrett1076@comcast.net]
	Corrected misspelling in File menu item.

2011-06-19    <Jim@LS-RED>

	* QtSpim/savelogfile.ui: QtSpim/menu.cpp  [Kenneth Lodge klodge@csu.edu.au]:
	Writing log file failed because of change to class of underlying
	windows. Eliminated HTML mode and cleaned up dialog box.

2011-02-05    <Jim@LS-RED>

	* CPU/scanner.l, CPU/parser.y [David Hemmendinger hemmendd@union.edu]:
	Allow full arithmetic expressions in constant definitions.

	* QtSpim/menu.cpp [Dave Reed <dreed@capital.edu>]:
	Single stepping after hitting a breakpoint started at the
	beginning of the program.

2011-01-18    <Jim@LS-RED>

	* Documentation/SourceForge/readme.txt [Sergio Barrachina Mir <barrachi@icc.uji.es>]:
	Installed Mac OS X version of QtSpim.

2011-01-09    <Jim@X64PC>

	* Version 9.0.5 released:

	* QtSpim/README, QtSpim/datawin.cpp, QtSpim/menu.cpp,
	QtSpim/regtextedit.h, QtSpim/regwin.cpp, QtSpim/settings.ui,
	QtSpim/spimview.h, QtSpim/spimview.ui, QtSpim/state.cpp:
	Renamed st_intRegBase -> st_regDisplayBase and used base setting
	to display FP registers.
	Changed inconsistent use of QtSPIM -> QtSpim.
	Dropped octal display format for register and data.